# p2p_lan_chat

./: CRYPTO_USAGE.md  Cargo.toml  README.md  blog.md  debug_crypto.sh  demo.sh  quick_demo.sh  test.sh  test_unsigned.sh
.github/workflows/: release.yml
docs/: book.toml
docs/book/: 404.html  EXAMPLE_SESSION.html  LEARNING_SUMMARY.html  P2P_CONCEPTS.html  index.html  introduction.html  print.html  searchindex.js  toc.html  toc.js
docs/src/: EXAMPLE_SESSION.md  LEARNING_SUMMARY.md  P2P_CONCEPTS.md  SUMMARY.md  introduction.md
src/: cli.rs  error.rs  lib.rs  main.rs  peer.rs  signal.rs
src/chat/: mod.rs
src/chat/display/: cli.rs  message_display.rs
src/chat/net/: broadcast.rs  discovery.rs  heartbeat.rs  listener.rs
src/crypto/: mod.rs  threshold.rs
src/network/: command.rs  mod.rs  tcp.rs
src/network/handlers/: chat.rs  common.rs  mod.rs  peer.rs  upgrade.rs
tests/: integration.rs  threshold_integration.rs
