[package]
name = "p2p-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1.17", features = ["v4"] }
colored = "3.0.0"
chrono = { version = "0.4", features = ["serde"] }
local-ip-address = "0.6.5"
clap = { version = "4.5.40", features = ["derive"] }
futures-util = "0.3.31"
libmdns = "0.9.1"
mdns = "3.0.0"
thiserror = "1.0"
env_logger = "0.11.8"
ed25519-dalek = { version = "2.0", features = ["rand_core", "serde"] }
rand = "0.8"
hex = "0.4"

[lib]
name = "p2p_chat"
path = "src/lib.rs"

[[bin]]
name = "p2p-chat"
path = "src/main.rs"
